--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>Home - Psychosis Echoes Of The Mind</title>
     <link rel="stylesheet" href="style.css"
     <style>
 
