--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>Game Trailers - Psychosis Echoes Of The Mind</title>
     <link rel="stylesheet" href="style3.css"
     <style>
 
