secret update 1, basic version done!

--- a/secret.html
+++ b/secret.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Mini Game Hub with Sounds</title>
+<title>Sam's Secret Casino</title>
 <style>
   body { font-family: Arial, sans-serif; background: #222; color: #eee; text-align: center; }
   button { margin: 5px; padding: 10px 15px; font-size: 16px; cursor: pointer; }
@@ -89,9 +89,11 @@
 </head>
 <body>
 
-<h1>🎮 Sam's Secret Gambling Site 🎮</h1>
+<h1>🎮 Sam's Secret Casino 🎮</h1>
 
 <div id="menu">
+  <a href="index.html">
+  <button onclick="showGame('home')">Home</button> </a> 
   <button onclick="showGame('rps')">Rock Paper Scissors</button>
   <button onclick="showGame('roulette')">Roulette</button>
   <button onclick="showGame('slots')">Slots</button>
